website/src/css/customTheme.css
/* ... */
::-webkit-scrollbar {
  width: 5px;
}
::-webkit-scrollbar-track {
  background: #f1f1f1;
}
::-webkit-scrollbar-thumb {
  background: #888;
}
::-webkit-scrollbar-thumb:hover {
  background: #555;
}

body, h1, h2, h3 {
  font-family: MaisonNeue-Medium, sans-serif;
}

div.inner {
  color: var(--ifm-color-primary);
}

.image {
  padding: 75px 10px 75px 75px;
}

.more-users {
  padding-top: 75px;
}

.post-header {
  padding-top: 50px;
}
.header {
  padding-top: 50px;
}

.color-primary {
  color: var(--ifm-color-primary);
}

header h2 {
  color: var(--color-primary);
}

@media only screen and (max-width: 414px) {
  .hide-on-mobile {
    display: none;
  }
}

/* navbar */
.navbar__link:hover,
.navbar__link--active {
  color: var(--color-primary);
}

.navbar__title {
  font-size: 18px;
  height: 30px;
}

.showcase {
  padding-left: 0;
  padding-right: 0;
}
.showcase .container {
  padding-left: 0;
  padding-right: 0;
  margin-left: 0;
  margin-right: 0;
  max-width: unset;
}

.showcase .user-logos {
  margin-top: 48px;
}

.showcase .user-logos:hover span {
  animation-play-state: paused !important;
}

.showcase .logo-row {
  display: flex;
  -webkit-box-align: center;
  align-items: center;
  height: 5rem;
  overflow: hidden;
  position: relative;
  width: 100%;
}

.showcase .user-logos-container {
  display: inline-block;
  white-space: nowrap;
  overflow: hidden;
  position: absolute;
}

.showcase .user-logos-container section {
  white-space: nowrap;
  overflow: hidden;
  display: flex;
  align-items: center;
}

.showcase .user-logos-container section span {
  animation: 36s linear 0s infinite reverse none running logo-animation;
  white-space: nowrap;
  overflow: hidden;
  display: flex;
  align-items: center;
}

.showcase .user-logo {
  max-width: 128px;
  max-height: 50px;
  margin: 0 16px;
}

@keyframes logo-animation {
  from {
    transform: translateX(-100%);
  }

  to {
    transform: translateX(0%);
  }
}

/* button */
.button {
  margin: 0 10px;
  padding: 12px 24px;
  font-size: 18px;
  font-weight: 600;
  border-radius: 10px;
  border: none;
  background: #fee2e2;
  color: #ef4444;
  transition: all 0.3s;
}
.button:hover {
  background: #fecaca;
  color: #ef4444;
}
.button.github {
  background: var(--color-github-button);
  color: white;
  display: inline-flex;
  align-items: center;
  margin-bottom: 15px;
}
.button.github .github-logo {
  height: 24px;
  margin: 0 12px 1px 0px;
}
.button.github:hover {
  background: var(--color-github-button-hover);
}
.button-wrapper {
  margin: 0 -10px;
}
.button.secondary {
  background: #f3f4f6;
  color: #1f2937;
  border: 1px solid #d1d5db;
  box-sizing: border-box;
  margin-bottom: 15px;
}
.button.secondary:hover {
  background: #e5e7eb;
}
@media only screen and (max-width: 414px) {
  .button {
    margin: 0;
  }
  .button.secondary,
  .button.github {
    width: 100%;
  }
  .button-wrapper {
    margin: 0;
  }
}
a {
  color: inherit;
  cursor: pointer;
}
a:hover {
  color: var(--color-primary);
}
.markdown a {
  color: var(--color-primary);
}

.arrow-btn {
  stroke-dasharray: 1000;
  stroke-dashoffset: 1002;
}

/*Hero section*/
.hide-title, .hide-subtitle, .hide-ctas {
  opacity: 0;
}

.hero-sec-wrap{
  display: flex;
  background: #f4f4f4ad;
  height: 100vh;
}

.homeCanvas-overlay {
  position: absolute;
  width: 50vw;
  height: 100vh;
  background: #FFFFFF;
  top: -1px;
  right: 0px;
}

.homeCanvas{
  width: 50vw;
  height: 100vh;
}

.hero-text {
  height: 100%;
  display: flex;
  flex-wrap: wrap;
  align-content: center;
  width: 50%;
  padding: 0 0 0 6vw;
}

.hero-title {
  font-family: MaisonNeue-Bold;
  color: #121212;
  width: 42vw;
  font-size: 4.2rem;
  letter-spacing: 0.2px;
  margin: 0;
}

.hero-subtitle {
  z-index: 100;
  font-size: 1.1rem;
  font-family: MaisonNeue-Light;
  position: relative;
  color: #615D5D;
  line-height: 30px;
  letter-spacing: 0.2px;
  margin: 25px 0;
  padding-right: 20px;
}

.hero-ctas {
  display: flex;
  align-items: center;
}

.btn {
  background: #030c16;
  border-style: solid;
  border-width: 1px;
  border: none;
  color: white;
  padding: 5px 20px 5px 20px;
  border-radius: 20px;
  font-size: 1rem;
  text-decoration: none;
  margin: 0 10px 0px 0;
  transition: all 0.3s;
}
.btn:hover {
  background: #9b9b9b;
  color: white;
  text-decoration: none;
}

.btn-docs{
  display: flex;
}
.btn-docs:hover{
  text-decoration: none;
  color: #9b9b9b;
}

/*Architecture section*/
.hldesign{
  height: 100%;
  display: flex;
  justify-content: center;
}

.hldesign-graphic{
  width: 60%;
  height: auto;
}

.Architecture_svg__architecture {
  font-family: MaisonNeue-Medium;
}

.arch {
  background: linear-gradient(180deg, #E2ECFF 15%, #FFF 90%);
  position: relative;
  z-index: 1;
  padding: 50px 0;
}

.arch-card-caption{
  height: 100%;
  display: flex;
  justify-content: center;
  color: #615D5D;
}

.arch-card-border {
  z-index: -10;
  position: absolute;
  width: 66%;
  height: 100%;
  border-style: solid;
  top: 15px;
  left: 17%;
  border-color: white;
  background: white;
  filter: drop-shadow(0px 4px 10px rgb(0,0,0,0.25));
}

.arch-head, .compare-head, .testimonials-head, .docs-promo-head, .oss-promo-head {
  font-size: 2.4rem;
  position: relative;
  left: 16.8%;
  width: 83.2%;
}

.arch-subtitle, .compare-subtitle, .testimonials-subtitle, .docs-promo-subtitle, .oss-promo-subtitle {
  font-size: 1.13rem;
  position: relative;
  left: 16.8%;
  width: 70%;
  color: #615D5D;
  letter-spacing: 0.2px;
  font-family: MaisonNeue-Light;
  font-weight: 700;
}

.arch-card-caption > p{
  letter-spacing: 0.2px;
  font-family: MaisonNeue-Light;
  font-weight: 700;
  text-align: center;
  position: relative;
  bottom: -15px; 
  font-size: 1rem;
}

.add-left-margin{
  position: relative;
  left: 16.8%;
}

/*Features section*/
.feat-head {
  font-size: 2.4rem;
  width: 75%;
}

.feat-container-d {
  display: block;
  width: 100%;
  height: 300vh;
  display: flex;
}

.feat-container-m {
  display: none;
}
/* ... */

